coffee-house/src/css/styles.css
/* ... */
  @media (max-width:400px) { /*MOBILE*/
    body {
        margin: 20px 16px;
    }
    .img3, .img2 {
        display: none;
    }
    .img4 {
        margin-top: 40px;
    }
    .button-icon-burger {
        float: inline-end;
        display: inline-flex;
        cursor: pointer;
    }
    .nav, .menu-item {
       position: fixed;
       top: 6rem;
       right: -200%;
       background-color: var(--background-body);
       width: 100vw;
       z-index: 2;
       font-size: 32px;
    }
    .nav li > a {
        font-size: 32px;
        justify-content: center;
    }
    .nav {
        display: grid;
        grid-template-columns: max-content;
    }
    header {
        position: relative;
    }
    .menu-item {
        position: absolute;
        margin-top: 12.8125rem;
        padding-top: 100px;
        padding-left: 41vw;
        padding-bottom: 100vh;
    }
    .quote h1{
        max-width: 340px;
    }
    .tabs {
        max-width: 340px;
    }
    .tab-item, .tab-active {
        max-width: 105px;
    }
    .enjoy h1 {
        margin-top: -10px;
        letter-spacing: 0.5px;
    }
    .enjoy p {
        margin-top: 40px;
        margin-bottom: 40px;
    }
    .favorite-coffee h2 {
        letter-spacing: 0.3px;
    }
    .slides img {
        width: 349px;
    }
    .slides p {
        line-height: 150%;
        margin-top: 17px;
        margin-bottom: 11px;
    }
    .mobile-container {
        margin-bottom: 40px;
    }
    .mobile-container h2 {
        margin-top: 100px;
        max-width: 354px;
        letter-spacing: 0.4px;
    }
    .mobile-container p {
        margin-top: 40px;
        max-width: 354px;
        line-height: 150%;
        margin-bottom: 40px;
    }
    .mobile-screens img {
        width: 100%;
    }
    .mobile-screens {
        margin-bottom: 95px;
    }
    .offer h2{
        margin-top: 30px;
    }
    .offer {
        margin-bottom: 17px;
    }
    .contacts-info {
        margin-top: 0;
    }
    .contacts-info ul > li > svg {
        margin-right: 4px;
    }
    .contacts-info ul > li {
        margin-bottom: 14px;
    }
    .quote h1 {
        font-size: 32px;
        margin-top: 2px;
        line-height: 125%;
    }
    .preview p {
        line-height: 150%;
        margin-top: 10px;
    }
    .price-preview {
        bottom: 20px;
    }
    .restore {
        margin: 40px 38vw 95px;
    }
  }

